--- a/cloud-arm/arm-images.tmpl
+++ b/cloud-arm/arm-images.tmpl
@@ -1,4 +1,4 @@
-{{$atlas:=httpget "https://atlas.hashicorp.com/api/v1/artifacts/sequenceiq/cloudbreak/azure-arm.image/search" | json | pointer "/versions/0"}}
+{{$url:=printf "https://atlas.hashicorp.com/api/v1/artifacts/sequenceiq/cloudbreak/azure-arm.image/search?version=%s" $version}}{{$atlas:=httpget $url | json | pointer "/versions/0"}}
 azure_rm:
   East Asia: https://sequenceiqeastasia2.blob.core.windows.net/images/{{ $atlas.metadata.image_name }}.vhd
   East US: https://sequenceiqeastus12.blob.core.windows.net/images/{{ $atlas.metadata.image_name }}.vhd
